Fixes the extrawhitespace issue on mobileview

--- a/main.css
+++ b/main.css
@@ -270,7 +270,7 @@ li {
 
 .skill h1 {
     text-transform: uppercase;
-    letter-spacing: 2rem;
+    letter-spacing: 1.8rem;
     margin: 2rem -2px 2rem 0;
 }
 .icon-container {
